--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,36 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "~/*": [
+          "src/app/*"
+      ],
+      "@shared": [
+          "src/app/shared"
+      ],
+      "@shared/*": [
+          "src/app/shared/*"
+      ],
+      "@constants/*": [
+          "src/app/constants/*"
+      ],
+      "@services/*": [
+          "src/app/services/*"
+      ],
+      "@services": [
+          "src/app/services"
+      ],
+      "@pages/*": [
+          "src/app/pages/*"
+      ],
+      "@models/*": [
+          "src/app/models/*"
+      ],
+      "@models": [
+          "src/app/models"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
